// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Resources /> renders LimitLabel subcomponent 1`] = `
<h5>
  <Flex
    alignContent="stretch"
    alignItems="center"
    direction="row"
    justifyContent="flex-start"
    wrap="nowrap"
  >
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={1}
      shrink={0}
    >
      <strong>
        test
      </strong>
    </FlexItem>
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      shrink={0}
    >
      <small
        className="text-info"
      >
        5
         
        GB
         available
      </small>
    </FlexItem>
  </Flex>
</h5>
`;

exports[`<Resources /> renders Resources component and calls onGet prop on mount 1`] = `
<div>
  <AdministrationSection
    content={
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <LimitLabel
          available={8}
          label="CPU Limit"
          unit="cores"
        />
        <InputError
          error={null}
          initialValue={3}
          max={8}
          min={1}
          name="proc"
          noMargin={true}
          onChange={[Function]}
          onInvalid={[Function]}
          onSave={[Function]}
          type="number"
          withButton={true}
        />
        <LimitLabel
          available={10}
          label="Memory Limit (GB)"
          unit="GB"
        />
        <InputError
          error={null}
          initialValue={5}
          max={10}
          name="mem"
          noMargin={true}
          onChange={[Function]}
          onInvalid={[Function]}
          onSave={[Function]}
          type="number"
          withButton={true}
        />
      </PanelBody>
    }
    description="Set limits on the computing resources Virtool can use on the host server."
    title="Resource Limits"
  />
</div>
`;

exports[`<Resources /> renders a <LoadingPlaceholder /> component when resources data are not yet fetched 1`] = `<LoadingPlaceholder />`;

exports[`<Resources /> renders an alert if the error props is set 1`] = `
<div>
  <Alert
    bsStyle="danger"
    icon="exclamation-circle"
  >
    Resource Limit values cannot be lower than corresponding Task-specific Limits.
  </Alert>
  <AdministrationSection
    content={
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <LimitLabel
          label="CPU Limit"
          unit="cores"
        />
        <InputError
          error={null}
          name="proc"
          noMargin={true}
          onChange={[Function]}
          onInvalid={[Function]}
          onSave={[Function]}
          type="number"
          withButton={true}
        />
        <LimitLabel
          label="Memory Limit (GB)"
          unit="GB"
        />
        <InputError
          error={null}
          name="mem"
          noMargin={true}
          onChange={[Function]}
          onInvalid={[Function]}
          onSave={[Function]}
          type="number"
          withButton={true}
        />
      </PanelBody>
    }
    description="Set limits on the computing resources Virtool can use on the host server."
    title="Resource Limits"
  />
</div>
`;

exports[`<Resources /> renders correctly 1`] = `
<div>
  <AdministrationSection
    content={
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <LimitLabel
          available={3}
          label="CPU Limit"
          unit="cores"
        />
        <InputError
          error={null}
          initialValue={3}
          max={3}
          min={3}
          name="proc"
          noMargin={true}
          onChange={[Function]}
          onInvalid={[Function]}
          onSave={[Function]}
          type="number"
          withButton={true}
        />
        <LimitLabel
          available={0}
          label="Memory Limit (GB)"
          unit="GB"
        />
        <InputError
          error={null}
          initialValue={5}
          max={0}
          min={5}
          name="mem"
          noMargin={true}
          onChange={[Function]}
          onInvalid={[Function]}
          onSave={[Function]}
          type="number"
          withButton={true}
        />
      </PanelBody>
    }
    description="Set limits on the computing resources Virtool can use on the host server."
    title="Resource Limits"
  />
</div>
`;
